:hammer: added parts of sass talk

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
-		<link href="https://fonts.googleapis.com/css?family=Kumar+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -25,14 +25,21 @@
 	</head>
 	<body>
 		<style>
-			.lora h1 {
-				font-family: 'Kumar One', cursive !important;
+			body {
+				background: #333333;
+			}
+			.lora * {
+				font-family: 'Lora', cursive !important;
+			}
+			.reveal section .no-border {
+				border:none;
+				box-shadow: 0px 0px 0px rgba(0,0,0,0);
 			}
 		</style>
-		<div class="reveal">
+		<div class="reveal lora">
 			<div class="slides">
 				<section>
-					<section class="lora">
+					<section>
 						<h1>
 							Welcome to
 						</h1>
@@ -41,7 +48,49 @@
 						</h1>
 					</section>
 				</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>Agenda</h1>
+					<ol>
+						<li>Introduction</li>
+						<li>Presentation</li>
+						<li>Announcements</li>
+						<li>Socializing</li>
+					</ol>
+				</section>
+				<section>
+					<h1>Introduction</h1>
+					<hr>
+					<h2>Welcome new members!</h2>
+				</section>
+				<section>
+					<h1>Presentation</h1>
+					<hr>
+					<h2>
+						Introduction to Sass
+					</h2>
+					<h4>
+						<a href="http://imdevan.com">Devan Huapaya</a>&nbsp;/&nbsp;<a href="http://twitter.com/devanipsum">@devanipsum</a>
+					</h4>
+				</section>
+				<section>
+					<h1>Announcements</h1>
+					<hr>
+					<ul>
+						<li>Thanks for coming to our first meeting</li>
+						<li>Meet monthly at The Iron Yard</li>
+						<li>Maybe more meetings if there is demands</li>
+						<li>Looking for more board members</li>
+						<li>Looking for sponsorship</li>
+					</ul>
+				</section>
+				<section>
+					<h1>Socializing</h1>
+					<hr>
+					<p>
+						Meet one person you didn't know before coming to Dallas Design
+						and Code
+					</p>
+				</section>
 			</div>
 		</div>
 
